# Chip8

./: .gitignore  CMakeLists.txt  LICENSE  memdump
src/: codes.c  codes.h  cpu.c  cpu.h  main.c  out  types.h
